--- a/src/main/resources/org/chemtrovina/cmtmsys/view/scan-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/scan-feature.fxml
@@ -45,7 +45,7 @@
                   <Font size="16.0" />
                </font>
             </Text>
-            <TextField fx:id="txtScanInput" />
+            <TextField fx:id="txtEmployeeId" />
             <Button fx:id="btnOnOff" mnemonicParsing="false" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: #545ffc;" text="ON" textFill="WHITE" />
          </children>
       </HBox>
@@ -106,5 +106,6 @@
             <TextField fx:id="txtScanCode" prefHeight="25.0" prefWidth="163.0" />
          </children>
       </HBox>
+      <Button fx:id="btnRefresh" layoutX="608.0" layoutY="759.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Refresh" />
    </children>
 </AnchorPane>
