--- a/src/main/resources/org/chemtrovina/cmtmsys/view/historyList-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/historyList-feature.fxml
@@ -102,7 +102,7 @@
                         </HBox>
                     </children>
                 </VBox>
-                <Button fx:id="searchBtn" layoutX="30.0" layoutY="395.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-background-color: #BF3C3C; -fx-font-weight: Bold;" text="Search" textFill="WHITE">
+                <Button fx:id="searchBtn" layoutX="30.0" layoutY="395.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-background-color: #e11313; -fx-font-weight: Bold;" text="Search" textFill="WHITE">
                     <font>
                         <Font size="14.0" />
                     </font>
