--- a/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.InvoiceController">
    <children>
@@ -23,7 +23,7 @@
             <TableColumn fx:id="colReelQty" maxWidth="200.0" prefWidth="100.0" text="Reel Qty" />
         </columns>
       </TableView>
-      <HBox layoutX="30.0" layoutY="33.0" prefHeight="26.0" prefWidth="650.0" spacing="10.0">
+      <HBox layoutX="30.0" layoutY="33.0" prefHeight="26.0" prefWidth="757.0" spacing="10.0">
          <children>
             <HBox prefHeight="19.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-border-radius: 30;">
                <children>
@@ -49,5 +49,29 @@
             <Button fx:id="btnSave" layoutX="510.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Save" />
          </children>
       </HBox>
+      <HBox layoutX="757.0" layoutY="33.0" prefHeight="26.0" prefWidth="391.0" spacing="10.0">
+         <children>
+            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" text="Choose File" />
+            <Pane prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
+               <children>
+                  <Text layoutX="57.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="72.0">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </Pane>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Import Data" />
+         </children>
+      </HBox>
+      <TableView fx:id="tblData" layoutX="757.0" layoutY="94.0" prefHeight="55.0" prefWidth="391.0">
+        <columns>
+          <TableColumn fx:id="colInvoice" prefWidth="75.0" text="Invoice No" />
+          <TableColumn fx:id="colItem" prefWidth="75.0" text="Row" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
    </children>
 </AnchorPane>
