--- a/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
@@ -13,17 +13,17 @@
 
 <AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.InvoiceController">
    <children>
-      <TableView fx:id="tableView" layoutX="30.0" layoutY="86.0" prefHeight="634.0" prefWidth="650.0">
+      <TableView fx:id="tableView" layoutX="30.0" layoutY="86.0" prefHeight="634.0" prefWidth="721.0">
         <columns>
           <TableColumn fx:id="colDate" maxWidth="200.0" prefWidth="88.0" text="Date" />
-            <TableColumn fx:id="colInvoiceNo" maxWidth="200.0" prefWidth="116.0" text="Invoice No" />
-            <TableColumn fx:id="colSAPCode" maxWidth="200.0" prefWidth="141.0" text="SAP Code" />
-            <TableColumn fx:id="colQty" maxWidth="200.0" prefWidth="113.0" text="Qty" />
-            <TableColumn fx:id="colMOQ" maxWidth="200.0" prefWidth="94.0" text="MOQ" />
-            <TableColumn fx:id="colReelQty" maxWidth="200.0" prefWidth="100.0" text="Reel Qty" />
+            <TableColumn fx:id="colInvoiceNo" maxWidth="200.0" prefWidth="182.0" text="Invoice No" />
+            <TableColumn fx:id="colSAPCode" maxWidth="206.0" prefWidth="165.0" text="SAP Code" />
+            <TableColumn fx:id="colQty" maxWidth="200.0" prefWidth="123.0" text="Qty" />
+            <TableColumn fx:id="colMOQ" maxWidth="200.0" prefWidth="93.0" text="MOQ" />
+            <TableColumn fx:id="colReelQty" maxWidth="200.0" prefWidth="68.0" text="Reel Qty" />
         </columns>
       </TableView>
-      <HBox layoutX="30.0" layoutY="33.0" prefHeight="26.0" prefWidth="757.0" spacing="10.0">
+      <HBox layoutX="30.0" layoutY="33.0" prefHeight="26.0" prefWidth="721.0" spacing="10.0">
          <children>
             <HBox prefHeight="19.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-border-radius: 30;">
                <children>
@@ -47,14 +47,15 @@
             </HBox>
             <Button fx:id="btnNew" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="New" />
             <Button fx:id="btnSave" layoutX="510.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Save" />
+            <Button fx:id="btnDeleteInvoice" layoutX="592.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text=" Delete Inv" />
          </children>
       </HBox>
-      <HBox layoutX="757.0" layoutY="33.0" prefHeight="26.0" prefWidth="391.0" spacing="10.0">
+      <HBox layoutX="804.0" layoutY="33.0" prefHeight="26.0" prefWidth="435.0" spacing="10.0">
          <children>
-            <Button fx:id="btnChooseFile" mnemonicParsing="false" prefHeight="26.0" prefWidth="92.0" text="Choose File" />
-            <Pane prefHeight="25.0" prefWidth="185.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
+            <Button fx:id="btnChooseFile" mnemonicParsing="false" prefHeight="26.0" prefWidth="109.0" text="Choose File" />
+            <Pane prefHeight="26.0" prefWidth="235.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
                <children>
-                  <Text fx:id="txtFileName" layoutX="57.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="72.0">
+                  <Text fx:id="txtFileName" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No file selected" textAlignment="CENTER" wrappingWidth="227.0">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -64,10 +65,10 @@
             <Button fx:id="btnImportData" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Import Data" />
          </children>
       </HBox>
-      <TableView fx:id="tblData" layoutX="757.0" layoutY="94.0" prefHeight="55.0" prefWidth="391.0">
+      <TableView fx:id="tblData" layoutX="804.0" layoutY="86.0" prefHeight="634.0" prefWidth="435.0">
         <columns>
-          <TableColumn fx:id="colInvoice" prefWidth="75.0" text="Invoice No" />
-          <TableColumn fx:id="colItem" prefWidth="75.0" text="Row" />
+          <TableColumn fx:id="colSapCode" prefWidth="75.0" text="SAP Code" />
+          <TableColumn fx:id="colQuantity" prefWidth="75.0" text="Quantity" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
