--- a/src/main/resources/org/chemtrovina/cmtmsys/view/moq-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/moq-feature.fxml
@@ -14,7 +14,7 @@
 
 <AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.MOQController">
     <children>
-        <TableView fx:id="moqTableView" fixedCellSize="0.0" layoutX="452.0" layoutY="27.0" prefHeight="730.0" prefWidth="806.0">
+        <TableView fx:id="moqTableView" fixedCellSize="0.0" layoutX="452.0" layoutY="14.0" prefHeight="730.0" prefWidth="806.0">
             <columns>
                 <TableColumn fx:id="noColumn" prefWidth="117.0" text="No" />
                 <TableColumn fx:id="makerColumn" prefWidth="199.0" text="Maker" />
@@ -24,7 +24,7 @@
                 <TableColumn fx:id="mslColumn" maxWidth="500.0" prefWidth="59.0" text="MSL" />
             </columns>
         </TableView>
-        <Pane layoutX="23.0" layoutY="65.0" prefHeight="558.0" prefWidth="422.0" style="-fx-background-color: #B9B9B9;">
+        <Pane layoutX="23.0" layoutY="37.0" prefHeight="558.0" prefWidth="422.0" style="-fx-background-color: #B9B9B9;">
             <children>
                 <VBox layoutX="20.0" layoutY="172.0" prefHeight="200.0" prefWidth="382.0" style="-fx-spacing: 42;">
                     <children>
@@ -128,6 +128,7 @@
             </Button>
             </children>
         </Pane>
+      <Button fx:id="btnExportData" layoutX="1128.0" layoutY="744.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-font-weight: Bold;" text="Export Data" />
 
     </children>
 </AnchorPane>
