--- a/src/main/resources/org/chemtrovina/cmtmsys/view/historyList-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/historyList-feature.fxml
@@ -1,128 +1,152 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.HistoryListController">
-    <children>
-        <!--<fx:include source="navbar.fxml" />-->
-        <TableView fx:id="historyDateTableView" fixedCellSize="0.0" layoutX="457.0" layoutY="28.0" prefHeight="702.0" prefWidth="823.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="28.0">
-            <columns>
-                <TableColumn fx:id="dateColumn" prefWidth="90.0" text="Date" />
-                <TableColumn fx:id="timeColumn" maxWidth="100.0" prefWidth="90.0" text="Time" />
-                <TableColumn fx:id="invoiceNoColumn" prefWidth="100.0" text="Invoice No" />
-                <TableColumn fx:id="makerColumn" prefWidth="100.0" text="Maker" />
-                <TableColumn fx:id="makerPNColumn" prefWidth="140.0" text="Maker P/N" />
-                <TableColumn fx:id="sapPNColumn" prefWidth="140.0" text="SAP P/N" />
-                <TableColumn fx:id="quantityColumn" maxWidth="500.0" prefWidth="104.0" text="Quantity" />
-                <TableColumn fx:id="mslColumn" maxWidth="141.0" prefWidth="58.0" text="MSL" />
-            </columns>
-        </TableView>
-        <HBox alignment="CENTER" spacing="10" />
+<BorderPane style="-fx-background-color: #456F92;" stylesheets="@../css/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.HistoryListController">
 
-        <Pane layoutX="26.0" layoutY="138.0" prefHeight="452.0" prefWidth="415.0" style="-fx-background-color: #B9B9B9;">
-            <children>
-                <VBox layoutX="14.0" layoutY="14.0" prefHeight="200.0" prefWidth="382.0" style="-fx-spacing: 42;">
+
+
+
+    <!-- Center -->
+    <center>
+
+        <HBox spacing="10">
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10" />
+            </padding>
+
+            <!-- LEFT: Form -->
+            <VBox prefWidth="400" spacing="15" style="-fx-background-color: #B9B9B9;" VBox.vgrow="ALWAYS">
+                <HBox alignment="CENTER" prefHeight="48" style="-fx-background-color: #2D3748;">
+                    <Text fill="WHITE" style="-fx-font-weight: Bold;" text="Search">
+                        <font>
+                            <Font size="24.0" />
+                        </font>
+                    </Text>
+                </HBox>
+
+                <GridPane hgap="10" vgap="12">
+                    <padding>
+                        <Insets bottom="10" left="10" right="10" top="10" />
+                    </padding>
+
+                    <Label style="-fx-font-weight: Bold;" text="Invoice No" GridPane.columnIndex="0" GridPane.rowIndex="0">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <TextField fx:id="invoiceNoField" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <CheckBox fx:id="invoiceNoCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+
+                    <Label style="-fx-font-weight: Bold;" text="Date" GridPane.rowIndex="2">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <DatePicker fx:id="dateTimePicker" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <CheckBox fx:id="dateCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+
+                    <Label style="-fx-font-weight: Bold;" text="SAP" GridPane.rowIndex="3">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <TextField fx:id="sapField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <CheckBox fx:id="sapCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+
+                    <Label style="-fx-font-weight: Bold;" text="P/N" GridPane.rowIndex="4">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <TextField fx:id="pnField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                    <CheckBox fx:id="pnCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+
+                    <Label style="-fx-font-weight: Bold;" text="Maker" GridPane.rowIndex="5">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <TextField fx:id="makerField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                    <CheckBox fx:id="makerCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+
+                    <Label style="-fx-font-weight: Bold;" text="MSL" GridPane.rowIndex="6">
+                        <font><Font size="20.0" /></font>
+                    </Label>
+                    <TextField fx:id="mslField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                    <CheckBox fx:id="mslCheckBox" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+               <Label layoutX="20.0" layoutY="20.0" style="-fx-font-weight: Bold;" text="Invoice PN" GridPane.rowIndex="1">
+                  <font>
+                     <Font size="20.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="invoicePNField" layoutX="132.0" layoutY="23.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+               <CheckBox fx:id="invoicePNCheckBox" layoutX="316.0" layoutY="27.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+               <columnConstraints>
+                  <ColumnConstraints />
+                  <ColumnConstraints />
+                  <ColumnConstraints />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+                  <RowConstraints />
+               </rowConstraints>
+                </GridPane>
+
+                <HBox alignment="CENTER" spacing="20">
+                    <padding>
+                        <Insets bottom="10" left="10" right="10" top="10" />
+                    </padding>
                     <children>
-                        <HBox prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="Invoice No" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <TextField fx:id="invoiceNoField" prefHeight="33.0" prefWidth="217.0" />
-                                <CheckBox fx:id="invoiceNoCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="109.0" prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="Date" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <DatePicker fx:id="dateTimePicker" prefHeight="25.0" prefWidth="218.0" />
-                                <CheckBox fx:id="dateCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="76.0" prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="SAP" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <TextField fx:id="sapField" prefHeight="33.0" prefWidth="217.0" />
-                                <CheckBox fx:id="sapCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="43.0" prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="P/N" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <TextField fx:id="pnField" prefHeight="33.0" prefWidth="217.0" />
-                                <CheckBox fx:id="pnCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="10.0" prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="Maker" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <TextField fx:id="makerField" prefHeight="33.0" prefWidth="217.0" />
-                                <CheckBox fx:id="makerCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
-                        <HBox layoutX="10.0" layoutY="278.0" prefHeight="33.0" prefWidth="401.0" style="-fx-spacing: 30;">
-                            <children>
-                                <Text strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="MSL" textAlignment="CENTER" wrappingWidth="98.783203125">
-                                    <font>
-                                        <Font size="18.0" />
-                                    </font>
-                                </Text>
-                                <TextField fx:id="mslField" prefHeight="33.0" prefWidth="217.0" />
-                                <CheckBox fx:id="mslCheckBox" mnemonicParsing="false" prefHeight="33.0" prefWidth="18.0" />
-                            </children>
-                        </HBox>
+                        <Button fx:id="searchBtn" style="-fx-background-color: #e11313; -fx-font-weight: Bold;" text="Search" textFill="WHITE">
+                            <font><Font size="17.0" /></font>
+                        </Button>
+                        <Button fx:id="clearBtn" style="-fx-font-weight: Bold;" text="Clear">
+                            <font><Font size="17.0" /></font>
+                        </Button>
                     </children>
-                </VBox>
-                <Button fx:id="searchBtn" layoutX="30.0" layoutY="395.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-background-color: #e11313; -fx-font-weight: Bold;" text="Search" textFill="WHITE">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-                <Button fx:id="clearBtn" layoutX="237.0" layoutY="395.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="130.0" style="-fx-font-weight: Bold;" text="Clear">
-                    <font>
-                        <Font size="14.0" />
-                    </font>
-                </Button>
-            </children>
-        </Pane>
-        <Pane layoutX="26.0" layoutY="90.0" prefHeight="48.0" prefWidth="415.0" style="-fx-background-color: #2D3748;">
+                </HBox>
+            </VBox>
+
+            <!-- RIGHT: Table -->
+            <TableView fx:id="historyDateTableView" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                <columns>
+                    <TableColumn fx:id="dateColumn" prefWidth="90" text="Date" />
+                    <TableColumn fx:id="timeColumn" prefWidth="90" text="Time" />
+                    <TableColumn fx:id="invoiceNoColumn" prefWidth="100" text="Invoice No" />
+                    <TableColumn fx:id="invoicePNColumn" prefWidth="100" text="Invoice PN" />
+                    <TableColumn fx:id="makerColumn" prefWidth="100" text="Maker" />
+                    <TableColumn fx:id="makerPNColumn" prefWidth="105.0" text="Maker P/N" />
+                    <TableColumn fx:id="sapPNColumn" prefWidth="126.0" text="SAP P/N" />
+                    <TableColumn fx:id="quantityColumn" prefWidth="113.0" text="Quantity" />
+                    <TableColumn fx:id="mslColumn" prefWidth="99.0" text="MSL" />
+               <TableColumn fx:id="specColumn" prefWidth="99.0" text="Spec" />
+                </columns>
+            </TableView>
+        </HBox>
+    </center>
+
+    <!-- Bottom -->
+    <bottom>
+        <HBox alignment="CENTER_RIGHT">
+            <padding>
+                <Insets bottom="10" left="10" right="10" top="10" />
+            </padding>
             <children>
-                <Text fill="WHITE" layoutX="167.0" layoutY="33.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="Search ">
-                    <font>
-                        <Font size="24.0" />
-                    </font>
-                </Text>
+                <Button fx:id="importExcelBtn" style="-fx-font-weight: Bold;" text="Export Data">
+                    <font><Font size="17.0" /></font>
+                </Button>
             </children>
-        </Pane>
-        <Button fx:id="importExcelBtn" layoutX="1130.0" layoutY="730.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="136.0" style="-fx-font-weight: Bold;" text="Export Data" />
-    </children>
-</AnchorPane>
+        </HBox>
+    </bottom>
+</BorderPane>
