--- a/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/invoice-feature.fxml
@@ -8,71 +8,84 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.InvoiceController">
-   <children>
-      <TableView fx:id="tableView" layoutX="30.0" layoutY="86.0" prefHeight="634.0" prefWidth="721.0">
-        <columns>
-          <TableColumn fx:id="colDate" maxWidth="200.0" prefWidth="88.0" text="Date" />
-            <TableColumn fx:id="colInvoiceNo" maxWidth="200.0" prefWidth="182.0" text="Invoice No" />
-            <TableColumn fx:id="colSAPCode" maxWidth="206.0" prefWidth="165.0" text="SAP Code" />
-            <TableColumn fx:id="colQty" maxWidth="200.0" prefWidth="123.0" text="Qty" />
-            <TableColumn fx:id="colMOQ" maxWidth="200.0" prefWidth="93.0" text="MOQ" />
-            <TableColumn fx:id="colReelQty" maxWidth="200.0" prefWidth="68.0" text="Reel Qty" />
-        </columns>
-      </TableView>
-      <HBox layoutX="30.0" layoutY="33.0" prefHeight="26.0" prefWidth="721.0" spacing="10.0">
-         <children>
-            <HBox prefHeight="19.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-border-radius: 30;">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date" textAlignment="CENTER" wrappingWidth="92.13671875">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <DatePicker fx:id="dpDate" prefHeight="31.0" prefWidth="147.0" />
-               </children>
+
+    <children>
+        <VBox spacing="10" AnchorPane.bottomAnchor="10" AnchorPane.leftAnchor="10" AnchorPane.rightAnchor="10" AnchorPane.topAnchor="10">
+
+            <!-- TOP CONTROLS -->
+            <HBox alignment="CENTER_LEFT" spacing="10">
+                <!-- Date -->
+                <HBox alignment="CENTER_LEFT" spacing="5" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+                    <Text text="Date">
+                        <font><Font size="16.0" /></font>
+                    </Text>
+                    <DatePicker fx:id="dpDate" prefWidth="150" />
+                </HBox>
+
+                <!-- Invoice No -->
+                <HBox alignment="CENTER_LEFT" spacing="5" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+                    <Text text="Invoice No">
+                        <font><Font size="16.0" /></font>
+                    </Text>
+                    <ComboBox fx:id="cbInvoiceNo" prefWidth="150" />
+                </HBox>
+
+                <!-- Action Buttons -->
+                <Button fx:id="btnNew" prefWidth="80" text="New" />
+                <Button fx:id="btnSave" prefWidth="80" text="Save" />
+                <Button fx:id="btnDeleteInvoice" prefWidth="100" text="Delete Inv" />
+
+                <!-- File Import Group -->
+                <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 0 0 0 40;">
+                    <Button fx:id="btnChooseFile" prefWidth="110" text="Choose File" />
+                    <Pane prefHeight="26" prefWidth="235" style="-fx-background-color: white; -fx-background-radius: 5;">
+                        <Text fx:id="txtFileName" layoutY="18.0" text="No file selected">
+                            <font><Font size="14.0" /></font>
+                        </Text>
+                    </Pane>
+                    <Button fx:id="btnImportData" prefWidth="110" text="Import Data" />
+                </HBox>
             </HBox>
-            <HBox prefHeight="26.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-border-radius: 100;">
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Invoice No" textAlignment="CENTER" wrappingWidth="92.13671875">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <ComboBox fx:id="cbInvoiceNo" prefHeight="25.0" prefWidth="148.0" />
-               </children>
+
+            <!-- TABLES -->
+            <HBox spacing="20" VBox.vgrow="ALWAYS">
+                <!-- Left Table: Invoice Data -->
+                <TableView fx:id="tableView" prefHeight="767.0" prefWidth="826.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                        <TableColumn fx:id="colDate" prefWidth="88" text="Date" />
+                        <TableColumn fx:id="colInvoiceNo" prefWidth="110.0" text="Invoice No" />
+                        <TableColumn fx:id="colInvoicePN" prefWidth="106.0" text="Invoice PN" />
+                        <TableColumn fx:id="colSAPCode" prefWidth="134.0" text="SAP Code" />
+                        <TableColumn fx:id="colQty" prefWidth="118.0" text="Qty" />
+                        <TableColumn fx:id="colMOQ" prefWidth="88.0" text="MOQ" />
+                        <TableColumn fx:id="colReelQty" prefWidth="94.0" text="Reel Qty" />
+                    </columns>
+                </TableView>
+
+                <!-- Right Table: Imported SAP Data -->
+                <VBox spacing="5" VBox.vgrow="ALWAYS">
+                    <TableView fx:id="tblData" prefHeight="767.0" prefWidth="588.0" VBox.vgrow="ALWAYS">
+                        <columns>
+                            <TableColumn fx:id="colSapCode" prefWidth="150" text="SAP Code" />
+                            <TableColumn fx:id="colQuantity" prefWidth="150" text="Quantity" />
+                        </columns>
+                        <columnResizePolicy>
+                            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                        </columnResizePolicy>
+                    </TableView>
+                </VBox>
             </HBox>
-            <Button fx:id="btnNew" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="New" />
-            <Button fx:id="btnSave" layoutX="510.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Save" />
-            <Button fx:id="btnDeleteInvoice" layoutX="592.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text=" Delete Inv" />
-         </children>
-      </HBox>
-      <HBox layoutX="804.0" layoutY="33.0" prefHeight="26.0" prefWidth="435.0" spacing="10.0">
-         <children>
-            <Button fx:id="btnChooseFile" mnemonicParsing="false" prefHeight="26.0" prefWidth="109.0" text="Choose File" />
-            <Pane prefHeight="26.0" prefWidth="235.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
-               <children>
-                  <Text fx:id="txtFileName" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="No file selected" textAlignment="CENTER" wrappingWidth="227.0">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Text>
-               </children>
-            </Pane>
-            <Button fx:id="btnImportData" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Import Data" />
-         </children>
-      </HBox>
-      <TableView fx:id="tblData" layoutX="804.0" layoutY="86.0" prefHeight="634.0" prefWidth="435.0">
-        <columns>
-          <TableColumn fx:id="colSapCode" prefWidth="75.0" text="SAP Code" />
-          <TableColumn fx:id="colQuantity" prefWidth="75.0" text="Quantity" />
-        </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
-   </children>
+            <HBox alignment="CENTER_LEFT" spacing="50.0" style="-fx-background-color: #F0F0F0; -fx-padding: 10;">
+                <Text fx:id="txtTotalQuantity" style="-fx-font-weight: Bold;" text="Total Quantity: 0" />
+                <Text fx:id="txtTotalReelQty" style="-fx-font-weight: Bold;" text="Total Reel Qty: 0" />
+            </HBox>
+
+
+        </VBox>
+    </children>
 </AnchorPane>
