--- a/src/main/resources/org/chemtrovina/cmtmsys/view/scan-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/scan-feature.fxml
@@ -6,111 +6,115 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="832.0" prefWidth="1280.0" style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.ScanController">
-   <children>
-      <HBox fx:id="hbTopFilter" layoutX="22.0" layoutY="33.0" prefHeight="26.0" prefWidth="490.0" spacing="10.0" style="-fx-background-radius: 10;">
+<BorderPane style="-fx-background-color: #456F92;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.ScanController">
+
+   <top>
+      <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-padding: 10;">
          <children>
-            <HBox fx:id="hbDate" prefHeight="19.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
+            <HBox alignment="CENTER_LEFT" spacing="5" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+               <Text text="Date" />
+               <DatePicker fx:id="dpDate" />
+            </HBox>
+
+            <HBox alignment="CENTER_LEFT" spacing="5" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+               <Text text="Invoice No" />
+               <ComboBox fx:id="cbInvoiceNo1" prefWidth="150" />
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="254.0" layoutY="20.0" spacing="5" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
                <children>
-                  <Text fx:id="txtDate" strokeType="OUTSIDE" strokeWidth="0.0" text="Date" textAlignment="CENTER" wrappingWidth="92.13671875">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <DatePicker fx:id="dpDate" prefHeight="31.0" prefWidth="147.0" />
+                  <Text text="Invoice PN" />
+                  <ComboBox fx:id="cbInvoicePN" prefWidth="150" />
                </children>
             </HBox>
-            <HBox fx:id="hbInvoice" layoutX="260.0" layoutY="10.0" prefHeight="19.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
-               <children>
-                  <Text fx:id="txtInvoiceLabel" strokeType="OUTSIDE" strokeWidth="0.0" text="Invoice No" textAlignment="CENTER" wrappingWidth="92.13671875">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <ComboBox fx:id="cbInvoiceNo1" prefHeight="25.0" prefWidth="148.0" />
-               </children>
+
+            <Button fx:id="btnSearch" text="Search" />
+            <Button fx:id="btnClear" text="Clear" />
+         </children>
+      </HBox>
+   </top>
+
+   <center>
+      <HBox spacing="20" style="-fx-padding: 10;">
+         <!-- LEFT SIDE -->
+         <VBox spacing="10" HBox.hgrow="ALWAYS">
+
+            <!-- TOP: Invoice Table + Input Form -->
+            <HBox spacing="10">
+               <!-- Invoice Table -->
+               <TableView fx:id="tblInvoiceList" prefHeight="120.0" prefWidth="300">
+                  <columns>
+                     <TableColumn fx:id="colDate" prefWidth="100" text="Date" />
+                     <TableColumn fx:id="colInvoiceNo" prefWidth="140" text="Invoice No" />
+                  </columns>
+               </TableView>
+
+               <!-- Scan Inputs -->
+               <VBox spacing="10">
+                  <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+                     <Text text="ID" />
+                     <TextField fx:id="txtScanInput" prefHeight="25.0" prefWidth="174.0" />
+                     <Button fx:id="btnOnOff" prefHeight="25.0" prefWidth="58.0" style="-fx-background-color: #a9a9ff;" text="ON" textFill="WHITE" />
+                  </HBox>
+
+                  <HBox alignment="CENTER_LEFT" spacing="10" style="-fx-background-color: white; -fx-background-radius: 5; -fx-padding: 5 10;">
+                     <Text text="Scan Code" />
+                     <TextField fx:id="txtScanCode" prefWidth="200" />
+                  </HBox>
+
+                  <Button fx:id="btnScanOddReel" disable="true" style="-fx-opacity: 0.6;" text="Scan odd reel" />
+               </VBox>
             </HBox>
-         </children>
+
+            <!-- Bottom Table -->
+            <TableView fx:id="tblScanDetails" VBox.vgrow="ALWAYS">
+               <columns>
+                  <TableColumn fx:id="colMakerCode" prefWidth="100" text="Maker Code" />
+                  <TableColumn fx:id="colSapCode" prefWidth="100" text="SAP Code" />
+                  <TableColumn fx:id="colMaker" prefWidth="90" text="Maker" />
+                  <TableColumn fx:id="colSpec" prefWidth="100" text="Spec" />
+                  <TableColumn fx:id="colMOQ" prefWidth="70" text="MOQ" />
+                  <TableColumn fx:id="colQty" prefWidth="70" text="Qty" />
+                  <TableColumn fx:id="colReelQty" prefWidth="80" text="Reel Qty" />
+                  <TableColumn fx:id="colInvoice" prefWidth="85.0" text="Invoice" />
+               </columns>
+            </TableView>
+
+            <Button fx:id="btnRefresh" alignment="CENTER_RIGHT" text="Refresh" />
+         </VBox>
+
+         <!-- RIGHT SIDE -->
+         <VBox alignment="TOP_CENTER" prefWidth="400" spacing="20" HBox.hgrow="ALWAYS">
+            <!-- Title -->
+            <StackPane prefHeight="60" style="-fx-background-color: #3789e1; -fx-background-radius: 10;">
+               <Text fx:id="txtScanResultTitle" fill="WHITE" style="-fx-font-weight: Bold;" text="Scan Result">
+                  <font><Font size="24.0" /></font>
+               </Text>
+            </StackPane>
+
+            <!-- Result Auto-Resizable -->
+            <StackPane fx:id="paneScanResult" style="-fx-background-color: #aeadad; -fx-background-radius: 10;" VBox.vgrow="ALWAYS">
+               <Text fx:id="txtScanStatus" fill="#807a7a" text="None">
+                  <font><Font size="64.0" /></font>
+               </Text>
+            </StackPane>
+
+            <!-- Bottom Buttons -->
+            <HBox alignment="CENTER" spacing="20">
+               <Button fx:id="btnKeepGoing" style="-fx-background-color: #22d73a; -fx-font-weight: Bold; -fx-background-radius: 10;" text="Keep going" textFill="WHITE">
+                  <font><Font size="18.0" /></font>
+               </Button>
+               <Button fx:id="btnCallSuperV" style="-fx-background-color: #f54d4d; -fx-font-weight: Bold; -fx-background-radius: 10;" text="Call Super-V" textFill="WHITE">
+                  <font><Font size="18.0" /></font>
+               </Button>
+            </HBox>
+         </VBox>
       </HBox>
-      <HBox fx:id="hbScanInput" layoutX="272.0" layoutY="94.0" prefHeight="25.0" prefWidth="298.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
-         <children>
-            <Text fx:id="txtID" strokeType="OUTSIDE" strokeWidth="0.0" text="ID" textAlignment="CENTER" wrappingWidth="92.13671875">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Text>
-            <TextField fx:id="txtScanInput" />
-            <Button fx:id="btnOnOff" mnemonicParsing="false" prefHeight="25.0" prefWidth="56.0" style="-fx-background-color: #545ffc;" text="ON" textFill="WHITE" />
-         </children>
-      </HBox>
-      <TableView fx:id="tblScanDetails" layoutX="22.0" layoutY="210.0" prefHeight="549.0" prefWidth="678.0">
-         <columns>
-            <TableColumn fx:id="colMakerCode" maxWidth="500.0" prefWidth="113.0" text="Maker Code" />
-            <TableColumn fx:id="colSapCode" maxWidth="500.0" prefWidth="113.0" text="SAP Code" />
-            <TableColumn fx:id="colMaker" maxWidth="500.0" prefWidth="100.0" text="Maker" />
-            <TableColumn fx:id="colMOQ" maxWidth="500.0" prefWidth="90.0" text="MOQ" />
-            <TableColumn fx:id="colQty" maxWidth="500.0" prefWidth="90.0" text="Qty" />
-            <TableColumn fx:id="colReelQty" maxWidth="500.0" prefWidth="90.0" text="Reel Qty" />
-            <TableColumn fx:id="colInvoice" maxWidth="500.0" text="Invoice" />
-         </columns>
-      </TableView>
-      <TableView fx:id="tblInvoiceList" layoutX="22.0" layoutY="94.0" prefHeight="88.0" prefWidth="240.0">
-         <columns>
-            <TableColumn fx:id="colDate" prefWidth="102.0" text="Date" />
-            <TableColumn fx:id="colInvoiceNo" prefWidth="137.0" text="Invoice No" />
-         </columns>
-      </TableView>
-      <Pane fx:id="paneScanResult" layoutX="771.0" layoutY="217.0" prefHeight="466.0" prefWidth="444.0" style="-fx-background-color: #aeadad; -fx-background-radius: 10;">
-         <children>
-            <Text fx:id="txtScanStatus" fill="#807a7a" layoutX="144.0" layoutY="256.0" strokeType="OUTSIDE" strokeWidth="0.0" text="None">
-               <font>
-                  <Font size="64.0" />
-               </font>
-            </Text>
-         </children>
-      </Pane>
-      <Button fx:id="btnKeepGoing" layoutX="771.0" layoutY="713.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="209.0" style="-fx-background-color: #22d73a; -fx-font-weight: Bold; -fx-background-radius: 10;" text="Keep going" textAlignment="CENTER">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Button fx:id="btnCallSuperV" layoutX="1006.0" layoutY="713.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="209.0" style="-fx-font-weight: Bold; -fx-background-color: #f54d4d; -fx-background-radius: 10;" text="Call Super-V" textFill="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Pane fx:id="paneScanTitle" layoutX="841.0" layoutY="119.0" prefHeight="67.0" prefWidth="304.0" style="-fx-background-color: #3789e1; -fx-background-radius: 10;">
-         <children>
-            <Text fx:id="txtScanResultTitle" fill="WHITE" layoutX="24.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: Bold;" text="Scan Result" textAlignment="CENTER" wrappingWidth="256.13671875">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Text>
-         </children>
-      </Pane>
-      <Button fx:id="btnSearch" layoutX="518.0" layoutY="34.0" mnemonicParsing="false" text="Search" />
-      <Button fx:id="btnClear" layoutX="578.0" layoutY="34.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Clear" />
-      <HBox layoutX="272.0" layoutY="126.0" prefHeight="25.0" prefWidth="240.0" style="-fx-background-color: #ffffff; -fx-background-radius: 5;">
-         <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Scan Code" textAlignment="CENTER" wrappingWidth="92.13671875">
-               <font>
-                  <Font size="16.0" />
-               </font>
-            </Text>
-            <TextField fx:id="txtScanCode" prefHeight="25.0" prefWidth="163.0" />
-         </children>
-      </HBox>
-      <Button fx:id="btnRefresh" layoutX="608.0" layoutY="759.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Refresh" />
-      <Button fx:id="btnScanOddReel" layoutX="272.0" layoutY="161.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="131.0" text="Scan odd reel">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-   </children>
-</AnchorPane>
+   </center>
+</BorderPane>
