--- a/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
+++ b/src/main/resources/org/chemtrovina/cmtmsys/view/navbar-feature.fxml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ToolBar?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<ToolBar prefHeight="31.0" prefWidth="1252.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="3.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.chemtrovina.cmtmsys.controller.NavbarController">
+<ToolBar prefHeight="31.0" prefWidth="1252.0"
+         AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="3.0"
+         xmlns="http://javafx.com/javafx/23.0.1"
+         xmlns:fx="http://javafx.com/fxml/1"
+         fx:controller="org.chemtrovina.cmtmsys.controller.NavbarController">
 
     <items>
-        <Button fx:id="btnInvoice" mnemonicParsing="false" prefHeight="27.0" prefWidth="126.0" style="-fx-font-weight: Bold;" text="Invoice" />
-        <Button fx:id="btnScan" mnemonicParsing="false" prefHeight="31.0" prefWidth="126.0" style="-fx-font-weight: Bold;" text="Scan" />
-        <Button fx:id="btnHistory" mnemonicParsing="false" prefHeight="31.0" prefWidth="126.0" style="-fx-font-weight: Bold;" text="History" />
-        <Button fx:id="btnMOQ" mnemonicParsing="false" prefHeight="31.0" prefWidth="126.0" style="-fx-font-weight: Bold;" text="MOQ" />
-      <Button fx:id="btnEmployee" layoutX="400.0" layoutY="10.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="126.0" style="-fx-font-weight: Bold;" text="Employee" />
+
+        <!-- Menu: Warehouse -->
+        <MenuButton text="Warehouse" style="-fx-font-weight: bold;" prefWidth="126.0">
+            <items>
+                <MenuItem fx:id="btnInvoice" text="Invoice" />
+                <MenuItem fx:id="btnScan" text="Scan" />
+                <MenuItem fx:id="btnHistory" text="History" />
+                <MenuItem fx:id="btnMOQ" text="MOQ" />
+            </items>
+        </MenuButton>
+
+        <!-- Menu: Manage Employee -->
+        <MenuButton text="Manage Employee" style="-fx-font-weight: bold;" prefWidth="160.0">
+            <items>
+                <MenuItem fx:id="btnEmployee" text="Employee" />
+                <MenuItem fx:id="btnShiftScheduling" text="Shift Scheduling" />
+            </items>
+        </MenuButton>
+
+        <!-- Menu: Inventory -->
+        <MenuButton fx:id="menuInventory" text="Inventory" style="-fx-font-weight: bold;" prefWidth="126.0">
+            <items>
+                <MenuItem fx:id="menuInventoryCheck" text="Check Inventory" />
+                <MenuItem fx:id="menuInventoryTransfer" text="Transfer Inventory" />
+                <MenuItem fx:id="menuTransferLog" text="Transfer Log" />
+                <MenuItem fx:id="menuProduct" text="Product" />
+            </items>
+        </MenuButton>
+
     </items>
 </ToolBar>
